stylesheets/_component.forms.scss
/* ... */
.form-range .input-group > .form__control:last-child {
    padding-right: 0;
}

.form__group {
    .table tbody {
        background-color: #fafafa;
        border-top: 1px solid color(border);
    }

    .table-container {
        margin-bottom: .5em;
    }
}

// undo default fieldset padding
fieldset.form__group--compound {
    padding: 0;
}

.form__group--compound {
    > .control__label {
        border-bottom: 0;
        float: left; // as we can't use inline-block
        font-size: inherit;
        line-height: inherit;
    }

    > .controls {
        @include respond-min($screen-small) {
            > .input-group {
                display: inline-flex;
            }
        }

        > .form__control,
        > .control__label,
        &:first-child > .control__label {
            display: inline-block;
        }

        // override regular stacked styling
        > .form__control,
        > .control__label,
        &:first-child > .control__label,
        > .input-group {
            clear: none;
            float: none;
            vertical-align: middle;
        }

        // make sure inputs are suitably spaced when they stack with 100% width
        // at small screen widths
        > .form__control,
        > .control__label,
        &:first-child > .control__label,
        > .input-group {
            margin-top: 5px;

            @include respond-min($screen-small) {
                margin-top: 0;

                &:not(:last-child) {
                    margin-right: 10px;
                }
            }
        }

        // inline radio/checkboxes need spacing apart slightly
        > .control__label:not(:first-of-type) {
            margin-left: 10px;
        }
    }
}

